// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty stack 1`] = `
Array [
  null,
]
`;

exports[`output includes all synthesized resources 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Resource1",
    "metadata": Object {
      "name": "test-resource1-2b59e3b8",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Resource2",
    "metadata": Object {
      "name": "test-resource2-22077398",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Resource3",
    "metadata": Object {
      "name": "test-resource3-365bba40",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Resource1",
    "metadata": Object {
      "name": "test-scope-resource1-3d54e80a",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Resource2",
    "metadata": Object {
      "name": "test-scope-resource2-e1b938d2",
    },
  },
]
`;

exports[`tokens are resolved during synth 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Resource1",
    "metadata": Object {
      "name": "test-resource1-2b59e3b8",
    },
    "spec": Object {
      "foo": 123,
      "implicitToken": Object {
        "foo": "bar",
      },
    },
  },
]
`;
